<resources>
    <string name="app_name">HHWT</string>
    <string name="packageName">com.hhwt.travelplanner</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="base_url">http://hhwt.tech/hhwt_webservice/</string>
    <!-- <string name="base_url">http://hhwt.tech/hhwt_webservice/</string>-->
    <string name="facebook_app_id">1469517816711711</string>
    <!-- Content description strings -->
    <string name="cd_background_image">background image</string>
    <string name="cd_main_image">main image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

    <string name="nav_item_explore">EXPLORE</string>
    <string name="nav_item_createtrip">CREATE TRIP</string>
    <string name="nav_item_mytrip">MY TRIPS</string>
    <string name="nav_item_guides">GUIDES</string>
    <string name="title_addnewplace">ADD NEW PLACE</string>
    <string name="title_addfeedback">ADD FEEDBACK</string>
    <string name="title_reportbug">REPORT A BUG</string>

    <string name="title_profile">PROFILE</string>
    <string name="add_btn">OK</string>
    <string name="cancel_btn">CANCEL</string>

    <string name="question">5 stars = Strongly Agree"</string>


    <string name="tour">TOURS</string>

    <string name="title_explore">EXPLORE</string>
    <string name="title_review">REVIEW</string>
    <string name="title_vote">VOTE FOR CITY</string>
    <string name="title_createtrip">CREATE TRIP</string>
    <string name="title_updatetrip">UPDATE TRIP</string>
    <string name="title_mytrip">MY TRIPS</string>
    <string name="title_guides">GUIDES</string>
    <string name="locale">SEOUL</string>


    <string name="head">Where are you headed?</string>
    <string name="ratings">HHWT Rating :</string>


    <string name="scity">Sorted by: City</string>
    <string name="foodanddrink">FOOD &amp; DRINKS</string>

    <string name="set_destination">SET AS DESTINATION</string>
    <string name="discover">DISCOVER</string>
    <string name="create_trip">CREATE TRIP</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="_search_seoul">SEARCH SEOUL</string>
    <string name="_trip_summary">TRIP SUMMARY</string>
    <string name="_neighbourhood">NEIGHBOURHOOD</string>
    <string name="_add_activities"><u>ADD ACTIVITIES</u></string>
    <string name="_food_drinks">FOOD &amp; DRINKS</string>
    <string name="_things_to_do">THINGS TO DO</string>
    <string name="_prayers">PRAYER SPACES</string>
    <string name="_nearbyplaces">Nearby places</string>
    <string name="_openinghours">Opening Hours : &#160;</string>
    <string name="_closehours">Closing Hours :&#160; &#160;</string>
    <string name="tab">place :\u0009</string>
    <string name="hhwtrecomments">HHWT Recommends</string>
    <string name="hint_entertrip">Enter Trip Name</string>

    <string name="search">Search</string>



    <string name="overviewdescription">Seoul, the capital of South Korea, is a sprawling metropolis where hyper-modern skyscrapers, high-tech subways and pop culture meet Buddhist temples, palaces and street markets. Notable attractions include futuristic Dongdaemun Design Plaza, a convention hall with curving architecture and a rooftop park; Gyeongbokgung Palace, which once had more than 7,000 rooms; and Jogyesa Temple, site of centuries-old locust and pine trees.</string>

    <string name="notice">Important Notice!</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_explore</item>
        <item>@string/nav_item_createtrip</item>
        <item>@string/nav_item_mytrip</item>
        <item>@string/nav_item_guides</item>
    </string-array>

    <integer-array name="nav_drawer_icons">
        <item>@drawable/explore_96</item>
        <item>@drawable/trip_96</item>
        <item>@drawable/mytrip_96</item>
        <item>@drawable/guide_96</item>
    </integer-array>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA5grbUYQKM9EaxKTIg5PRDVxeV3p-fxMw</string>
    <string name="facebook_app_name">HHWT</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">355198514515820</string>
    <string name="exception">Exception: %1$s</string>


    <string name="hint_choose">Choose Item</string>
    <string name="hint_email">Your Email ID</string>
    <string name="hint_username">Your Username</string>
    <string name="hint_contactnum">Phone number </string>
    <string name="hint_interest">Interested in</string>
    <string name="hint_password">Your Password</string>
    <string name="hint_message">Message</string>
    <string name="hint_location">Your Location</string>
    <string name="hint_confirmpassword">Confirm Your Password</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_yourname">Your Name</string>
    <string name="hint_purpose">Purpose of Visit</string>
    <string name="hint_title">Title Your Review</string>
    <string name="hint_place">Your Location</string>
    <string name="hint_yourreview">Type Your Review Here</string>
    <string name="title_activity_map_location">Map</string>
    <string name="title_activity_maps">Map</string>

</resources>
