<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutBackground"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".activity.HomeFIrstFragment">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/explore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="vertical">
            <!-- Session photo -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@drawable/explore_120" />

            <com.hhwt.travelplanner.widgets.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:minLines="2"
                android:text="@string/title_explore"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                app:typeface="robotoBold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/createtrip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="vertical">
            <!-- Session photo -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@drawable/trip_120" />

            <com.hhwt.travelplanner.widgets.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:minLines="2"
                android:text="@string/title_createtrip"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                app:typeface="robotoBold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/mytrip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Session photo -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@drawable/my_trip_120" />

            <com.hhwt.travelplanner.widgets.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:minLines="2"
                android:text="@string/title_mytrip"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                app:typeface="robotoBold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/guide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:orientation="vertical">
            <!-- Session photo -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@drawable/guide_120" />

            <com.hhwt.travelplanner.widgets.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:minLines="2"
                android:text="@string/title_guides"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                app:typeface="robotoBold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>